2009-02-07  Adam Schreiber  <sadam@clemson.edu>

    * daemon/org.gnome.seahorse.service.in:
    * daemon/seahorse-daemon.desktop.in.in: Remove -d flag from exec strings
    to start the daemon.

    * daemon/seahorse-daemon.desktop.in.in: Only autostart the daemon when
    sharing is enabled.  Fixes bug #570773

2009-02-06  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-object.c: Map 'raw-id' DBus field to 
	internal properties.
	
2009-02-06  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-unknown-source.c: Fix problem constructing
	SeahorseUnknownSource due to read-only property. 
	
	* libseahorse/seahorse-context.c: Fix problem with not creating 'missing'
	objects when the 'auto_retrieve' setting isn't set. Fixes bug #570456
	
	* libseahorse/seahorse-unknown-source.c: Set location of unknown objects
	correctly to signifiy searching or missing.
	
2009-02-05  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-context.c: 
	* libseahorse/seahorse-context.h: Ref objects while the 
	context is being destroyed, so that removing an object 
	that was removed by another object doesn't crash. We need
	a new ownership model....

	* pgp/seahorse-pgp-key.c: Register UIDs with the context. This
	enables their IDs to be once again used over DBus. Fixes bug #570704
	
2009-02-04  Stef Walter  <stef@memberwebs.com>

	* configure.in:
	* libcryptui/Makefile.am:
	* libcryptui/tests/Makefile.am:
	* libcryptui/tests/cryptui-test-ui.c: Revert accidental deletion 
	of libcryptui test program deletion in svn commit [2716]
	
	* daemon/seahorse-service-keyset.c: Don't return objects without ids
	via libcryptui. Fixes bug #570454

	* daemon/seahorse-service-crypto.c:
	* pgp/seahorse-gpgme-key.c:
	* pgp/seahorse-gpgme-source.c:
	* pgp/seahorse-hkp-source.c:
	* pgp/seahorse-ldap-source.c:
	* pgp/seahorse-pgp-key.c:
	* pgp/seahorse-pgp-key.h:
	* pgp/seahorse-pgp-signature.c:
	* pgp/seahorse-server-source.c: Rework functions for converting pgp keyids