@@ -1,3 +1,9 @@
+2009-02-08  Stef Walter  <stef@memberwebs.com>
+
+	* common/seahorse-registry.c: 
+	* src/seahorse-viewer.c: GType is 64-bits on 64-bit platforms. 
+	Fixes bug #562084. Research by Joe Marcus Clarke, Scott McVittie
+	
 2009-02-07  Adam Schreiber  <sadam@clemson.edu>
 
     * daemon/org.gnome.seahorse.service.in:
